# laserThingConsole

./: .gitignore  CMakeLists.txt  README.md  getNextSquare.cpp  gridElement  gridElement.hpp  gridPattern.txt  gridPattern3.txt  gridPattern5.txt  gridPattern8.txt  main.cpp  setGridPattern.cpp  squareParamSetup.cpp  visualize.cpp
include/: gridElement.hpp
src/: getFirstSquare.cpp  getNextSquare.cpp  getOutputEdge.cpp  main.cpp  printZeroGrid.cpp  setGridPattern.cpp  squareParamSetup.cpp  visualize.cpp
